fix: Education layout on mobile

--- a/src/view/components/Education/style.scss
+++ b/src/view/components/Education/style.scss
@@ -9,7 +9,7 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 40px;
-    min-width: 1100px;
+    max-width: 1100px;
     margin: 0 auto;
   }
 
@@ -41,4 +41,43 @@
     text-align: right;
     color: #000000d4;
   }
+
+  @media screen and (max-width: 960px) {
+    padding: 93px 36px 40px;
+
+    &__title {
+      text-align: right;
+      color: #000000f2;
+    }
+
+    &__list {
+      gap: 68px;
+    }
+
+    &__right-warpper {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+
+    &__where {
+      text-align: right;
+    }
+  }
+
+  @media screen and (max-width: 740px) {
+    padding: 93px 20px 40px;
+
+    &__list {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
+    &__year {
+      text-align: right;
+      margin-top: 48px;
+    }
+  }
+
 }
